✨ feat(code): [도전 Lv.3] 스트림 활용하여 특정한 값보다 큰 값에서 삭제 기능
1) 입력한 값보다 큰 값에서 조회
2) 큰 값 리스트 삭제 로직
3) 이후 입력값과 같거나 작은 리스트(나머지) 와 병합
4) 최종 결과 출력